--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
-fastapi
-uvicorn
-sqlmodel
-httpx
-aiogram==2.25.1
-python-dotenv
-serpapi
-psycopg2-binary  # PostgreSQL için bu şart!
+fastapi==0.110.0
+uvicorn==0.29.0
+sqlmodel==0.0.16
+httpx==0.27.0
+aiogram==3.4.1
+python-dotenv==1.0.1
+serpapi==0.1.5
+psycopg2-binary==2.9.9
+pydantic==2.7.1
+SQLAlchemy==2.0.29
